# cfgedit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  test.json
src/: main.cpp
